# swagger/default.yaml
@@ -9,8 +9,23 @@ security:
   - bearerAuth: []
 
 paths:
+  /items:
+   get:
+      operationId: getItems
+      summary: Returns a list of items
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Item"
+        500:
+          description: Error
 
-  
+
 
   /items/{itemId}:
    get:
@@ -25,8 +40,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Item"
-        403:
-          description: Forbidden
         500:
           description: Error
 
@@ -84,7 +97,7 @@ paths:
         500:
           description: err
 
-  /login:
+  /auth/login:
     post:
       operationId: login
       summary: User signs in
@@ -123,7 +136,7 @@ paths:
           description: bad email or password
         401:
           description: unauthorized
-  /signup:
+  /auth/signup:
     post:
       operationId: signup
       summary: User signs up
